[tool.poetry]
name = "kb"
version = "0.1.0"
description = ""
authors = ["Dan Trickey <dan@trickey.io>"]

[tool.poetry.dependencies]
python = "^3.6"
mkdocs = "^1.0"
mkdocs-material = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
