[tool.poetry]
name = "kb"
version = "0.1.0"
description = ""
authors = ["Southampton Robotics Outreach <sro@soton.ac.uk>", "Dan Trickey <dan@trickey.io>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.0"
mkdocs-material = "^8.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
